# swin-vit-experiments

./: .gitignore  LICENSE  README.md  main.py  main_professional.py  pyproject.toml  test_results_final.json  thesis_results_summary.json
analysis/: generate_thesis_results.py  thesis_results_analyzer.py
analysis_tools/: upload_test_results_wandb.py  upload_to_wandb.py
detailed_test_results/: DETAILED_EVALUATION_REPORT.md  aggregate_results.json  per_file_results.csv  per_file_results.json
evaluation/: detailed_test_evaluator.py  evaluate_test_set.py  test_evaluation_simple.py
experiments/: spatial_experiment.yaml
kfold_results/: CV_REPORT.md  kfold_cv_results.json  kfold_splits.json
kfold_visualizations/: VISUALIZATION_SUMMARY.md
report_LaTeX/: report.bib  report.tex
rigorous_splits/: SPLIT_REPORT.md  split_report.json  split_summary.json  test_manifest.csv  train_manifest.csv  val_manifest.csv
scripts/: monitor_training.sh  start_training.sh
src/: config.py
src/core/: run.py  trainer.py
src/data/: datamodule.py
src/factories/: augmentation_factory.py  loss_factory.py  model_factory.py  optimizer_factory.py  scheduler_factory.py
src/scripts/: instantiate_model.py
src/swin_vit_experiments.egg-info/: PKG-INFO  SOURCES.txt  (+3 more)
test_scripts/: analyze_dataset.py  balance_dataset.py  check_pretrained_384.py  check_swin_models.py  clean_dataset.py  create_balanced_dataset_v2.py  create_final_balanced_dataset.py  debug_model.py  test_final_model.py  test_model_fix.py  test_swin_384.py
tools/: rigorous_data_split.py
training/: kfold_trainer.py
(+1 files in other folders)
